<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Login"
    tools:showIn="@layout/activity_login">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/textView1"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:text="@string/textView2"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.172"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        app:layout_constraintVertical_bias="0.038" />

    <EditText
        android:id="@+id/playerName"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/PlayerName"
        android:inputType="textPersonName"
        android:singleLine="false"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.105"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/Psw"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/PlayerPsw"
        android:inputType="textPassword"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/playerName"
        app:layout_constraintVertical_bias="0.038"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnLoginn"
        style="@android:style/Widget.Button"
        android:layout_width="141dp"
        android:layout_height="66dp"
        android:text="@string/BtnLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.455" />
</androidx.constraintlayout.widget.ConstraintLayout>